Change file path

--- a/src/content/docs/create-component.mdx
+++ b/src/content/docs/create-component.mdx
@@ -4,8 +4,8 @@ description: Learn how to create your stat component
 ---
 
 import { Card, CardGrid, Steps, LinkCard, Code } from '@astrojs/starlight/components';
-import statcomponentheader from './src/content/codes/statcomponent.h?raw';
-import statcomponentcpp from './src/content/codes/statcomponent.cpp?raw';
+import statcomponentheader from '../codes/statcomponent.h?raw';
+import statcomponentcpp from '../codes/statcomponent.cpp?raw';
 
 ## Blueprint
 
