Change file path override-experience-formula

--- a/src/content/docs/override-experience-formula.mdx
+++ b/src/content/docs/override-experience-formula.mdx
@@ -4,8 +4,8 @@ description: Learn how to modify experience formula
 ---
 
 import { Card, CardGrid, Steps, LinkCard, Code, Aside } from '@astrojs/starlight/components';
-import experiencestatheader from './src/content/codes/experiencestat.h?raw';
-import experiencestatcpp from './src/content/codes/experiencestat.cpp?raw';
+import experiencestatheader from '../codes/experiencestat.h?raw';
+import experiencestatcpp from '../codes/experiencestat.cpp?raw';
 
 To change the formula that determines the level according to experience in a [UExperienceStat](../classes/uexperiencestat), you will need to override its [GetExperienceRequired](../classes/uexperiencestat#GetExperienceRequired)() function.
 
