--- a/src/content/docs/hide-stats.mdx
+++ b/src/content/docs/hide-stats.mdx
@@ -7,7 +7,7 @@ import { Card, CardGrid, Steps, LinkCard, Aside } from '@astrojs/starlight/compo
 
 If you use a [FStatModifier](/structs/fstatmodifier) in the editor, you will see in StatName your stats, but also example ones from the plugin.
 
-<img src="../../assets/stat-name-all.png" alt=""/>
+<img src="../assets/stat-name-all.png" alt=""/>
 
 ### How to hide other stats
 
@@ -19,12 +19,12 @@ If you use a [FStatModifier](/structs/fstatmodifier) in the editor, you will see
 		<li>
 			<b>Select your stat component parent class</b>
 			
-			<img src="../../assets/stat-name-setting.png" alt=""/>
+			<img src="../assets/stat-name-setting.png" alt=""/>
 		</li>
 		<li>
 			<b>Now only the stats of your parent class and derived classes are shown</b>
 			
-			<img src="../../assets/stat-name-hidden.png" alt=""/>
+			<img src="../assets/stat-name-hidden.png" alt=""/>
 		</li>
 	</ol>
 </Steps>
