--- a/src/content/docs/override-experience-formula.mdx
+++ b/src/content/docs/override-experience-formula.mdx
@@ -17,13 +17,13 @@ To change the formula that determines the level according to experience in a [UE
 			<b>Right click in the Content Browser</b>
 			
 			Select <b>Blueprint Class.</b>
-			<img src="../../assets/bp_create_class.png" alt=""/>
+			<img src="../assets/bp_create_class.png" alt=""/>
 		</li>
 		<li>
 			<b>Pick parent class</b>
 			
 			In <b>All classes</b>, pick <b>ExperienceStat</b>.
-			<img src="../../assets/bp_create_experience.png" alt=""/>
+			<img src="../assets/bp_create_experience.png" alt=""/>
 		</li>
 		<li>
 			<b>Open your experience stat blueprint</b>
@@ -32,12 +32,12 @@ To change the formula that determines the level according to experience in a [UE
 			<b>Mouseover the right side of the function panel to see the hidden menu "Override"</b>
 			
 			Override GetExperienceRequired().
-			<img src="../../assets/bp_override_experience.png" alt=""/>
+			<img src="../assets/bp_override_experience.png" alt=""/>
 		</li>
 		<li>
 			<b>Change the formula by what you desire</b>
 			
-			<img src="../../assets/bp_formula_experience.png" alt=""/>
+			<img src="../assets/bp_formula_experience.png" alt=""/>
 			<Aside type="caution">Be sure that your formula is valid for InLevel == 0, even if unused.</Aside>
 		</li>
 	</ol>
@@ -54,7 +54,7 @@ To change the formula that determines the level according to experience in a [UE
 			<b>Pick parent class</b>
 			
 			In <b>All classes</b>, pick <b>ExperienceStat</b>.
-			<img src="../../assets/cpp_create_experience.png" alt=""/>
+			<img src="../assets/cpp_create_experience.png" alt=""/>
 		</li>
 		<li>
 			<b>Override GetExperienceRequired_Implementation()</b>
