--- a/src/content/docs/create-component.mdx
+++ b/src/content/docs/create-component.mdx
@@ -17,13 +17,13 @@ import statcomponentcpp from '../codes/statcomponent.cpp?raw';
 			<b>Right click in the Content Browser</b>
 			
 			Select <b>Blueprint Class.</b>
-			<img src="../../assets/bp_create_class.png" alt=""/>
+			<img src="../assets/bp_create_class.png" alt=""/>
 		</li>
 		<li>
 			<b>Pick parent class</b>
 			
 			In <b>All classes</b>, pick <b>StatComponent</b>.
-			<img src="../../assets/bp_create_component.png" alt=""/>
+			<img src="../assets/bp_create_component.png" alt=""/>
 		</li>
 		<li>
 			Your component is ready to be added to your character !
@@ -66,26 +66,26 @@ import statcomponentcpp from '../codes/statcomponent.cpp?raw';
 				/>
 			</div>
 			
-			<img src="../../assets/variables.png" alt=""/>
+			<img src="../assets/variables.png" alt=""/>
 		</li>
 		<li>
 			<b>Be sure to create your stat on serverside</b>
 			
-			<img src="../../assets/serveronly.png" alt=""/>
+			<img src="../assets/serveronly.png" alt=""/>
 		</li>
 		<li>
 			<b>Use the node CreateNewStat on your stat variable</b>
 			
 			The node will detect automatically the class of the variable and create the right instance.
 			
-			<img src="../../assets/bp_create_stat.png" alt=""/>
+			<img src="../assets/bp_create_stat.png" alt=""/>
 		</li>
 		<li>
 			<b>Initialize your stat</b>
 			
 			Each stat class has its own Init() function.
 			
-			<img src="../../assets/bp_init_stat.png" alt=""/>
+			<img src="../assets/bp_init_stat.png" alt=""/>
 		</li>
 		<li>
 			<b>Repeat the process for all your stats</b>
@@ -95,7 +95,7 @@ import statcomponentcpp from '../codes/statcomponent.cpp?raw';
 		<li>
 			<b>Don't forget to replicate your stats</b>
 			
-			<img src="../../assets/bp_stat_replicate.png" alt=""/>
+			<img src="../assets/bp_stat_replicate.png" alt=""/>
 		</li>
 		<li>
 			<b>Your stats are ready to be used !</b>
@@ -116,7 +116,7 @@ import statcomponentcpp from '../codes/statcomponent.cpp?raw';
 			<b>Pick parent class</b>
 			
 			In <b>All classes</b>, pick <b>StatComponent</b>.
-			<img src="../../assets/cpp_create_component.png" alt=""/>
+			<img src="../assets/cpp_create_component.png" alt=""/>
 		</li>
 		<li>
 			<b>Your component is ready to be added to your character !</b>
