Smaller title, centered

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -7,7 +7,7 @@ import { Card, CardGrid, Steps, LinkCard } from '@astrojs/starlight/components';
 
 ## Installation
 
-<img src="assets/title.jpg" alt=""/>
+<img src="assets/title.jpg" alt="" style="width: 700px; display: block; margin: auto;"/>
 
 RB Stat is a plugin allowing you to create RPG-typed characteristics (hunger, health, mana, experience, etc...) in few clicks, in C++ and BP, auto-replicating. Each stat can receive temporary bonus, which allow you to connect it easily to your buff/equipment system.
 
