Fixed LinkCard description in create-component again

--- a/src/content/docs/create-component.mdx
+++ b/src/content/docs/create-component.mdx
@@ -147,7 +147,7 @@ import statcomponentcpp from '../codes/statcomponent.cpp?raw';
 				<LinkCard
 					title="URegenStat"
 					href="../classes/uregenstat"
-					description="URegenStat is the most basic stat, with only one value and the bonus system. Typically used for one value stat like armor."
+					description="URegenStat is a URangeValueStat with regeneration over time. Typically used for mana."
 				/>
 				<LinkCard
 					title="UExperienceStat"
